--- a/archive/static/roman/style.css
+++ b/archive/static/roman/style.css
@@ -18,6 +18,16 @@ a.line-number:visited {
     color: green;
 }
 
+div.extras a {
+    font-size: 0.8em;
+    padding-right: 1em;
+    color: darkgreen;
+}
+div.extras {
+    position: fixed;
+    right: 0;
+}
+
 a.line-number {
     color: green;
     position: absolute;
@@ -36,6 +46,7 @@ p:hover a.line-number {
 
 div.navigation span, span.context-toc {
     float: left;
+    padding-top: 1.1em;
     margin: 0.5em;
     margin-bottom: 1em;
 }
