use different color for version label

--- a/archive/static/roman/style.css
+++ b/archive/static/roman/style.css
@@ -40,6 +40,10 @@ body {
     visibility: visible;
 }
 
+.tooltiptext span{
+    color: #888;
+}
+
 div.versions {
     font-size: 0.8em;
     position: fixed;
